--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.10.1",
     "socket.io-client": "^4.8.1",
+    "vite-plugin-pwa": "^1.2.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
